Green gradient behind Solve

--- a/src/sections/header/style.sass
+++ b/src/sections/header/style.sass
@@ -72,6 +72,11 @@ header
         font-size: 3.75em
         line-height: 1.22em
 
+        span.green
+          background: $green-gradient
+          -webkit-text-fill-color: transparent
+          -webkit-background-clip: text
+
       p
         display: flex
         margin: 3px 0 0
